spring.session.store-type=jdbc 제거

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.hikari.username=sa
 
 spring.h2.console.enabled=true
 
-spring.session.store-type=jdbc
+#spring.session.store-type=jdbc
 
