--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,3 +1,3 @@
 spring.profiles.include=real-db
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 #spring.session.store-type=jdbc
